Added Brief Discussion

--- a/CSCI_158_Assingnment_1.ipynb
+++ b/CSCI_158_Assingnment_1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNuofzU0U9pNWl6DWZEnoA7",
+      "authorship_tag": "ABX9TyNDhVdVJecXj5dXTF/QljYm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -501,6 +501,42 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Brief Discussion:**\n",
+        "\n",
+        "In this experiment, the fingerprint spoof attack detection was performed using two supervised learning models:\n",
+        "1. Logistic Regression (LR)\n",
+        "2. Decision Tree (DT).\n",
+        "\n",
+        "The dataset was preprocessed by cleaning the label column, normalizing feature values, and splitting the data into training and testing sets (80/20).\n",
+        "\n",
+        "Both models were trained to classify fingerprints as real or spoof based on feature patterns. Evaluation was done using accuracy, precision, recall, F1-score, and confusion matrices.\n",
+        "\n",
+        "The results showed that both models successfully identified spoof attacks with good overall accuracy.\n",
+        "\n",
+        "Logistic Regression produced more balanced metrics and interpretability, while the Decision Tree captured deeper patterns but showed a slight risk of overfitting.\n",
+        "\n",
+        "As discussed in our class with Module-VII (Part-II Extension), the precision minimizes false positives (real fingerprints marked as spoof),recall reduces false negatives (missed spoof attacks), and F1-score balances both.\n",
+        "\n",
+        "In practical biometric systems maintaining a higher recall is much more critical to avoid allowing spoof fingerprints to pass undetected.\n",
+        "\n",
+        "Overall, Logistic Regression offers stability and generalization, whereas Decision Tree provides flexibility for more complex spoof patterns."
+      ],
+      "metadata": {
+        "id": "1ZG2WbtUBXMh"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "nHnN9eibBe6H"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
