--- a/CSCI_158_Assingnment_1.ipynb
+++ b/CSCI_158_Assingnment_1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNDhVdVJecXj5dXTF/QljYm",
+      "authorship_tag": "ABX9TyO9YCSsAAVQ/6y0mw/S/I9l",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -350,7 +350,7 @@
         "    print(\"Recall   :\", round(recall_score(y_true, y_pred), 4))\n",
         "    print(\"F1 Score :\", round(f1_score(y_true, y_pred), 4))\n",
         "    print(\"\\nConfusion Matrix:\\n\", confusion_matrix(y_true, y_pred))\n",
-        "    print(\"\\nClassification Report:\\n\", classification_report(y_true, y_pred))\n",
+        "    print(\"\\nClassification Report:\\n\", classification_report(y_true, y_pred, zero_division=0))\n",
         "\n",
         "# Evaluate both models\n",
         "evaluate_model(\"Logistic Regression\", y_test, y_pred_lr)\n",
@@ -388,9 +388,9 @@
           "height": 1000
         },
         "id": "DfuJC4d1yHeV",
-        "outputId": "c137e328-e705-4cfd-a0e5-cb55f64b78a9"
+        "outputId": "660b429a-e0fc-4847-cc16-6b458ae16cf0"
       },
-      "execution_count": 14,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -466,18 +466,6 @@
           ]
         },
         {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.12/dist-packages/sklearn/metrics/_classification.py:1565: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-            "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
-            "/usr/local/lib/python3.12/dist-packages/sklearn/metrics/_classification.py:1565: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-            "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
-            "/usr/local/lib/python3.12/dist-packages/sklearn/metrics/_classification.py:1565: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-            "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n"
-          ]
-        },
-        {
           "output_type": "display_data",
           "data": {
             "text/plain": [
@@ -528,15 +516,6 @@
       "metadata": {
         "id": "1ZG2WbtUBXMh"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "nHnN9eibBe6H"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
